finished basic form UI

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
             <p id="description">bjadkwbiuabfubawiufbiawubfiuawbfiubwaifawubfiawbfiubfwaubwaiufbaiubfiuwabfiuabuiufawbiufawbifawbiuafwbuifaw</p>
             <p id="slogan">Ailergy - Live life</p>
         </div>
+        <div id="form-container">
+            <h2 id="sign-up">Sign Up</h2>
         <form>
-                <h2 id="sign-up">Sign Up</h2>
                 <label for="first_name">First Name</label>
                 <input type="text" id="first_name" name="first_name" placeholder="Your First Name" required>
                 <label for="last_name">Last Name</label>
@@ -34,6 +35,12 @@
                 <label for="confirm_password">Confirm Password</label>
                 <input type="password" id="confirm_passoword" name="confirm_passowrd" required>
         </form>
+        </div>
+        <button type="submit">Create Account</button>
+        <div id="log-in">
+            <p>Already have an account?</p>
+            <a href="">Log in</a>
+        </div>
     </div>
 </body>
 </html>
